# streamlit-groceries-receipt-app

./: .dockerignore  .envrc-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app-config-template-github.toml  app-config-template-local.toml  create-user-db.py  list-users.py  logger-config.json  pyproject.toml  railway.toml  receipt.json  synthesize-and-parse-receipt.ipynb
.github/workflows/: streamlit-groceries-app.yml
.streamlit/: config.toml
app/: app-config-template-docker.toml  main.py
app/tools/: collect_data.py  process_image.py
tests/: test_app.py
