[project]
name = "streamlit-railway-groceries-receipt-app"
version = "0.0.1"
description = "Demo of a streamlit app hosted on railway using a vision language model to extract data from a grocery receipt."
authors = [
    { name = "eschmidt42", email = "11818904+eschmidt42@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.39.0",
    "pydantic>=2.9.2",
    "bcrypt>=4.2.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "polars>=1.9.0",
    "xlsxwriter>=3.2.0",
    "streamlit-cropper>=0.2.2",
    "anthropic>=0.35.0",
    "instructor>=1.5.1",
    "rich>=13.9.2",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.1.1",
    "playwright>=1.47.0",
    "pytest-playwright>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/library"]

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
omit = ["*/tests/*"]
show_missing = true

[tool.pytest.ini_options]
markers = [
    "server: marks tests that require a running streamlit server (deselect with '-m \"not server\"')",
]

[tool.rye.scripts]
test = { cmd = "rye test --all -- -vx -m \"not server\"" }
cov = { cmd = "pytest --cov=libraries/src/libraries --cov-report html -m \"not server\" libraries/tests" }
